# python-exercises

./: README.md  environment.yaml  pyproject.toml
.github/workflows/: docs_pages.yaml  test-solutions.yml
src/exercises/: initiation.py
src/pycheckio/: initiation.py
tests/: test_initiation.py
