[tool.poetry]
name = "python-exercises"
version = "0.1.0"
description = ""
authors = ["tms-gvd <thomas.gaviard@gmail.com>"]
readme = "README.md"
packages = [{include = "python_exercises"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
