[tool.poetry]
name = "pycheckio"
version = "0.1.0"
description = "My solutions for the Python exercises from https://py.checkio.org/"
authors = ["tms-gvd <thomas.gaviard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.3"
coverage = "^6.4.4"
pylint = "^2.15.3"
Sphinx = "^5.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
